modelView now controls all action above blue buttons on Model Maker  *wrote fieldsFilled and fixed fieldCollapse to be called from modelView  *edit and small view of main fields are now hide/show divs  *added text wrap so long essay prompts say in the the div

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -272,6 +272,10 @@ https://kuler.adobe.com/create/color-wheel/?base=2&rule=Complementary&selected=4
     cursor: pointer;
 }
 
+#promptSpaceSmall{
+    word-wrap: break-word;
+}
+
 /******************************************************/
 
 /*For Tutorial*/
